configuration/manifests/jellyfin.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:latest
          ports:
            - containerPort: 8096
          volumeMounts:
            # On branche les disques DANS le conteneur
            - name: jellyfin-config-storage
              mountPath: /config
            - name: jellyfin-cache-storage
              mountPath: /cache
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi" # Plafond de RAM (pour rassurer VS Code)
              cpu: "2000m" # Plafond CPU
      volumes:
        # On définit QUELS disques utiliser
        - name: jellyfin-config-storage
          persistentVolumeClaim:
            claimName: jellyfin-config-pvc
        - name: jellyfin-cache-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
  namespace: media
spec:
  type: NodePort
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 8096
      targetPort: 8096
      nodePort: 30000
